--- a/test/yaml/staging/myservice.yml
+++ b/test/yaml/staging/myservice.yml
@@ -1,5 +1,4 @@
 maven:
-  repository: file:./test/repository/
   groupid: com.meltwater
   artifactid: myservice
   version: 1.0.0
@@ -7,3 +6,6 @@ override:
   cpus: 1
   env:
     DATABASE: database:3306
+variables:
+  env:
+    rabbitmq: amqp://localhost:15672
