--- a/src/resources/yaml/staging/myservice.yml
+++ b/src/resources/yaml/staging/myservice.yml
@@ -2,6 +2,10 @@ maven:
   groupid: com.meltwater
   artifactid: myservice
   version: 1.0.0
+hipchat:
+  token: SFCABT1GxNHnDNn62D6mX4X3z4EvBMZchkgbTbzb
+  rooms:
+    - 2087542
 override:
   cpus: 1
   env:
