--- a/src/resources/yaml/globals.yml
+++ b/src/resources/yaml/globals.yml
@@ -1,6 +1,6 @@
 maven:
-  repository: "file:./src/resources/repository/"
+  repository: 'file:./src/resources/repository/'
 hipchat:
-  token: "abc123"
+  token: 'abc123'
   rooms:
-    - "123"
+    - '123'
