--- a/src/resources/yaml/staging/myservice-broken.yml
+++ b/src/resources/yaml/staging/myservice-broken.yml
@@ -1,7 +1,7 @@
 maven:
-  groupid: com.meltwater
-  artifactid: myservice
-  version: 1.0.0
+  groupid: 'com.meltwater'
+  artifactid: 'myservice'
+  version: '1.0.0'
 override:
   cpus: 1.0
   env
