--- a/src/resources/yaml/staging/myservice-nomaven.yml
+++ b/src/resources/yaml/staging/myservice-nomaven.yml
@@ -1,10 +1,10 @@
 service:
-  id: "/myproduct/myservice-nomaven"
+  id: '/myproduct/myservice-nomaven'
   container:
     docker:
-      image: "meltwater/myservice:latest"
+      image: 'meltwater/myservice:latest'
   env:
-    DATABASE: "database:3306"
+    DATABASE: 'database:3306'
   cpus: 1.0
   mem: 1200
   instances: 1
