Added support for getting the uniqueVersion name from snapshots. Setting an environment variable to lighter.uniqueVersion and using forcePullImage ensures that snapshots are rolled out if they've been rebuilt

--- a/src/resources/yaml/staging/myservice-snapshot.yml
+++ b/src/resources/yaml/staging/myservice-snapshot.yml
@@ -1,8 +1,7 @@
 maven:
   groupid: 'com.meltwater'
-  artifactid: 'myservice-classifier'
-  version: '1.0.0'
-  classifier: 'marathon'
+  artifactid: 'myservice'
+  version: '1.1.1-SNAPSHOT'
 override:
   cpus: 1.0
   env:
