--- a/src/resources/yaml/staging/myservice-unique-snapshot.yml
+++ b/src/resources/yaml/staging/myservice-unique-snapshot.yml
@@ -1,7 +1,7 @@
 maven:
   groupid: 'com.meltwater'
-  artifactid: 'myservice-classifier'
-  version: '1.0.0'
+  artifactid: 'myservice-snapshot'
+  resolve: '[,]-SNAPSHOT'
   classifier: 'marathon'
 override:
   cpus: 1.0
