--- a/src/resources/yaml/staging/myservice-classifier.yml
+++ b/src/resources/yaml/staging/myservice-classifier.yml
@@ -6,7 +6,8 @@ maven:
 override:
   cpus: 1.0
   env:
-    SERVICE_VERSION: '%{lighter.uniqueVersion}'
+    SERVICE_VERSION: '%{lighter.version}'
+    SERVICE_BUILD: '%{lighter.uniqueVersion}'
     DATABASE: 'database:3306'
 hipchat:
   rooms:
