Fixed problem resulting in 0.0 being merged as None

--- a/src/resources/yaml/staging/myservice.yml
+++ b/src/resources/yaml/staging/myservice.yml
@@ -8,6 +8,8 @@ override:
     SERVICE_VERSION: '%{lighter.version}'
     SERVICE_BUILD: '%{lighter.uniqueVersion}'
     DATABASE: 'database:3306'
+  upgradeStrategy:
+    maximumOverCapacity: 0.0
 hipchat:
   rooms:
     - '456'
