--- a/src/resources/yaml/staging/myservice.yml
+++ b/src/resources/yaml/staging/myservice.yml
@@ -9,6 +9,7 @@ override:
     SERVICE_BUILD: '%{lighter.uniqueVersion}'
     DATABASE: 'database:3306'
     CVAR: '%{cvar}'
+    NEW_RELIC_APP_NAME: '%{newrelic.appname.prefix} MyService'
   upgradeStrategy:
     maximumOverCapacity: 0.0
 hipchat:
