Added Secretary support

--- a/src/resources/yaml/globals.yml
+++ b/src/resources/yaml/globals.yml
@@ -12,3 +12,10 @@ docker:
   registries:
     'authregistrywithport:5000':
       auth: 'dXNlcm5hbWU6cGFzc3dvcmQ='
+secretary:
+  url: "http://secretary:5070"
+  config:
+    publickey: 'src/resources/yaml/staging/keys/config-public-key.pem'
+    privatekey: 'src/resources/yaml/staging/keys/config-private-key.pem'
+  master:
+    publickey: 'src/resources/yaml/staging/keys/master-public-key.pem'
