--- a/src/resources/yaml/globals.yml
+++ b/src/resources/yaml/globals.yml
@@ -8,3 +8,9 @@ variables:
   rabbitmq.url: amqp://localhost:5672
 newrelic:
   token: 'i_am_an_api_token'
+docker:
+  registries:
+    'authregistrywithport:5000':
+      auth: 'dXNlcm5hbWU6cGFzc3dvcmQ='
+    'registry.hub.docker.com':
+      auth: 'aHVidXNlcm5hbWU6aHVicGFzc3dvcmQ='
