Fixed problem with config being null when secretary wasn't configured

--- a/src/resources/yaml/staging/globals.yml
+++ b/src/resources/yaml/staging/globals.yml
@@ -6,3 +6,7 @@ variables:
 hipchat:
   rooms:
     - "456"
+secretary:
+  url: "http://secretary:5070"
+  master:
+    publickey: 'src/resources/yaml/staging/keys/master-public-key.pem'
