Refactored away need for both util.replaceEnv() and util.replace() Fixed error when a variable is used multiple times in same string Added test for whitespace in variable name Added test for env variables in json template

--- a/src/resources/yaml/staging/myservice-env-variable.yml
+++ b/src/resources/yaml/staging/myservice-env-variable.yml
@@ -4,7 +4,7 @@ service:
     docker:
       image: 'meltwater/myservice:%{env.VERSION}'
   env:
-    DATABASE: 'database:3306'
+    DATABASE: '%{env.DATABASE}'
   cpus: 1.0
   mem: 1200
   instances: 1
