Fix all flake8 extra violations and add pep8 config in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,7 @@
 [flake8]
 ignore = E121,E123,E126,E226,E24,E704,E301,E302,E309
 max-line-length = 160
-max-complexity = 10
+max-complexity = 15
+[pep8]
+ignore = E121,E123,E126,E226,E24,E704,E301,E302,E309
+max-line-length = 160
