--- a/src/resources/yaml/integration/myservice.yml
+++ b/src/resources/yaml/integration/myservice.yml
@@ -1,7 +1,7 @@
 maven:
   groupid: 'com.meltwater'
   artifactid: 'myservice'
-  resolve: '[1.0.0,1.1.0)'
+  version: '[1.0.0,1.1.0)'
 override:
   cpus: 1.0
   env:
