Don't warn for unencrypted KEY_ID patterns

--- a/src/resources/yaml/staging/myservice-encrypted-password.yml
+++ b/src/resources/yaml/staging/myservice-encrypted-password.yml
@@ -7,6 +7,7 @@ override:
   env:
     SERVICE_VERSION: '%{lighter.version}'
     SERVICE_BUILD: '%{lighter.uniqueVersion}'
+    AWS_ACCESS_KEY_ID: '123abc'
     DATABASE_PASSWORD: 'ENC[NACL,deadbeef]'
     CVAR: '%{cvar}'
     NEW_RELIC_APP_NAME: '%{newrelic.appname.prefix} MyService'
