--- a/src/resources/yaml/staging/myservice-encrypted-password.yml
+++ b/src/resources/yaml/staging/myservice-encrypted-password.yml
@@ -8,6 +8,7 @@ override:
     SERVICE_VERSION: '%{lighter.version}'
     SERVICE_BUILD: '%{lighter.uniqueVersion}'
     AWS_ACCESS_KEY_ID: '123abc'
+    AMQP_ROUTING_KEY: 'abc'
     DATABASE_PASSWORD: 'ENC[NACL,deadbeef]'
     CVAR: '%{cvar}'
     NEW_RELIC_APP_NAME: '%{newrelic.appname.prefix} MyService'
