Support posting custom release notes during the hipchat notification
Signed-off-by: Salimane Adjao Moustapha <salimane.moustapha@meltwater.com>

--- a/src/resources/yaml/staging/myservice-docker-private.yml
+++ b/src/resources/yaml/staging/myservice-docker-private.yml
@@ -6,3 +6,5 @@ service:
   env:
     SERVICE_VERSION: "%{lighter.version}"
     SERVICE_BUILD: "%{lighter.uniqueVersion}"
+hipchat:
+  message.image.label: "com.example.component.release-notes"
